Implement EbikesManager and EbikeRepository, general refactorings